--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.light {
+    background-color: #ffffff; 
+    color: #000000;
+  }
+  
+  .dark {
+    background-color: #374151;
+    color: #ffffff;
+  }
+  
